# local-cro-marketplace-xxwbii

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
src/backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  gunicorn_conf.py  main.py  pyproject.toml  requirements.txt  test_requirements.txt
src/backend/app/: __init__.py  config.py  constants.py  dependencies.py  exceptions.py  logging_config.py  security.py
src/backend/app/api/: __init__.py
src/backend/app/core/: __init__.py  auth.py  config.py  jwt.py  security.py  settings.py
src/backend/app/crud/: __init__.py  base.py  crud_experiment.py  crud_library.py  crud_molecule.py  crud_notification.py  crud_result.py  crud_submission.py  crud_user.py
src/backend/app/db/: __init__.py  base.py  base_class.py  init_db.py  session.py
src/backend/app/models/: __init__.py  experiment.py  experiment_molecule.py  experiment_parameter.py  experiment_type.py  library.py  library_molecule.py  molecule.py  molecule_property.py  notification.py  result.py  result_data.py  result_file.py  submission.py  submission_detail.py  user.py
src/backend/app/molecular/: __init__.py  molecule_converter.py  processor.py  property_calculator.py  similarity_searcher.py  substructure_searcher.py  (+1 more)
src/backend/docker/: Dockerfile  entrypoint.sh  start.sh
src/backend/migrations/: __init__.py  env.py
src/backend/scripts/: backup-db.sh  format.sh  lint.sh  prestart.sh  restore-db.sh  start.sh  test.sh
src/backend/tests/: __init__.py  conftest.py  test_main.py
(+345 files in other folders)
