[tool.poetry]
name = "molecular-data-platform-backend"
version = "1.0.0"
description = "Backend API for the Molecular Data Management and CRO Integration Platform"
authors = ["Development Team <dev@example.com>"]
readme = "README.md"
license = "Proprietary"
repository = "https://github.com/example/molecular-data-platform"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.95.0"
uvicorn = "0.21.1"
gunicorn = "20.1.0"
sqlalchemy = "2.0.7"
alembic = "1.10.2"
psycopg2-binary = "2.9.5"
pydantic = "2.0.0"
python-jose = "3.3.0"
passlib = "1.7.4"
bcrypt = "4.0.1"
python-multipart = "0.0.6"
rdkit = "2023.03.1"
pandas = "2.0.0"
numpy = "1.24.2"
celery = "5.2.7"
redis = "4.5.4"
minio = "7.1.14"
email-validator = "2.0.0"
python-dotenv = "1.0.0"
tenacity = "8.2.2"
aiofiles = "23.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
pytest-cov = "4.1.0"
pytest-asyncio = "0.21.0"
httpx = "0.24.0"
black = "23.3.0"
isort = "5.12.0"
flake8 = "6.0.0"
mypy = "1.2.0"
pre-commit = "3.2.2"

[tool.poetry.scripts]
start = "uvicorn app.main:app --reload"
test = "pytest"
lint = "flake8 app tests"
format = "black app tests && isort app tests"
typecheck = "mypy app"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"